# rag

./: .gitignore  HANDOFF.md  ONBOARDING.md  README.md  _build_section_page_index_impl.py  answer_query.py  build_index_test_support.py  build_section_page_index.py  probe_queries.ps1  pyproject.toml  retrieve_sections.py  run_eval_suite.ps1  run_round.ps1  run_validation.py  section_page_index.json  section_retrieval_eval_cases.json  section_retrieval_eval_cases_concept_family_competition_boundary.json  section_retrieval_eval_cases_definition_content_head.json  section_retrieval_eval_cases_multi_char_partial_overlap_boundary.json  section_retrieval_eval_cases_opening_definition_bridge_boundary.json  section_retrieval_eval_cases_pure_partial_overlap_residual_boundary.json  section_retrieval_eval_cases_single_char_definition_boundary.json  test_answer_query.py  test_build_section_page_index.py  test_cli.py  test_distribution_smoke.py  test_probe_queries.py  test_retrieve_sections.py  test_run_eval_suite.py  test_run_round.py  test_run_validation.py
.github/workflows/: ci.yml
discrete_math_rag/: __main__.py  cli.py
test_fixtures/build_index/: expected_section_page_index.json
test_fixtures/build_index/vault/: page_index.md
test_fixtures/build_index/vault/notes/graphs/: 10.2.1 Trees.md
test_fixtures/build_index/vault/notes/logic/: 3.2.1 Proposition.md  3.2.2 Compound Propositions.md
test_fixtures/build_index/vault/notes/orphans/: 8.1.1 Unmatched Note.md
